@@ -3,7 +3,14 @@ package ca.cal.leandrose.service;
 
 import ca.cal.leandrose.model.*;
 import ca.cal.leandrose.repository.*;
+import ca.cal.leandrose.service.dto.ProfDto;
 import ca.cal.leandrose.service.dto.evaluation.*;
+import ca.cal.leandrose.service.dto.evaluation.employer.EvaluationEmployerFormData;
+import ca.cal.leandrose.service.dto.evaluation.employer.EvaluationEmployerInfoDto;
+import ca.cal.leandrose.service.dto.evaluation.prof.EntrepriseTeacherDto;
+import ca.cal.leandrose.service.dto.evaluation.prof.EvaluationProfFormDto;
+import ca.cal.leandrose.service.dto.evaluation.prof.EvaluationTeacherInfoDto;
+import ca.cal.leandrose.service.dto.evaluation.prof.StudentTeacherDto;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -21,43 +28,115 @@ public class EvaluationStagiaireService {
     private final StudentRepository studentRepository;
     private final InternshipOfferRepository internshipOfferRepository;
     private final EntenteStageRepository ententeStageRepository;
+    private final ProfRepository profRepository;
     private final PDFGeneratorService pdfGeneratorService;
 
-    public EvaluationStagiaireDto createEvaluation(Long employeurId, Long studentId, Long internshipId){
+    public EvaluationStagiaireDto createEvaluationByEmployer(Long employerId, Long studentId, Long internshipId){
+        return createEvaluationInternal(CreatorTypeEvaluation.EMPLOYER, employerId, studentId, internshipId);
 
-        if (evaluationStagiaireRepository.existsByInternshipOfferIdAndStudentId(internshipId, studentId)){
-            throw new IllegalStateException("Une évaluation existe déjà pour ce stagiaire et ce stage");
-        }
+    }
+    public EvaluationStagiaireDto createEvaluationByProf(Long profId, Long studentId, Long internshipId){
+        return createEvaluationInternal(CreatorTypeEvaluation.PROF, profId, studentId, internshipId);
+    }
 
-        Employeur employeur = employeurRepository.findById(employeurId)
-                .orElseThrow(() -> new RuntimeException("Employeur non trouvé"));
+    private EvaluationStagiaireDto createEvaluationInternal(
+            CreatorTypeEvaluation creator,
+            Long creatorId,
+            Long studentId,
+            Long internshipId
+    ) {
 
+        // Fetch core entities
         Student student = studentRepository.findById(studentId)
                 .orElseThrow(() -> new RuntimeException("Étudiant non trouvé"));
 
         InternshipOffer internshipOffer = internshipOfferRepository.findById(internshipId)
-                .orElseThrow(() -> new RuntimeException("Entente non trouvé"));
+                .orElseThrow(() -> new RuntimeException("Offre de stage non trouvée"));
 
-        EvaluationStagiaire stage = EvaluationStagiaire.builder()
+        EntenteStage stage = ententeStageRepository
+                .findByCandidature_Student_IdAndCandidature_InternshipOffer_Id(studentId, internshipId)
+                .orElseThrow(() -> new RuntimeException("Aucune entente de stage trouvée"));
+
+        Employeur employerFromStage = stage.getEmployeur();
+        Prof profFromStage = stage.getProf();
+
+        Optional<EvaluationStagiaire> existingOpt =
+                evaluationStagiaireRepository.findByStudentIdAndInternshipOfferId(studentId, internshipId);
+
+        if (existingOpt.isPresent()) {
+            EvaluationStagiaire existing = existingOpt.get();
+
+            // EMPLOYER tries to start their section
+            if (creator == CreatorTypeEvaluation.EMPLOYER) {
+
+                if (!existing.isSubmittedByEmployer()) {
+                    // employer continues their section
+                    return mapToDto(existing);
+                }
+            }
+
+            // PROF tries to start their section
+            if (creator == CreatorTypeEvaluation.PROF) {
+
+                if (!existing.isSubmittedByProfessor()) {
+                    // professor continues their section
+                    return mapToDto(existing);
+                }
+            }
+
+            // If both sections are already submitted
+            throw new IllegalStateException("L'évaluation complète existe déjà pour ce stagiaire.");
+        }
+
+
+        //créer un nouveau formulaire
+
+        Employeur emp = null;
+        Prof prof = null;
+
+        if (creator == CreatorTypeEvaluation.EMPLOYER) {
+            emp = employeurRepository.findById(creatorId)
+                    .orElseThrow(() -> new RuntimeException("Employeur non trouvé"));
+            prof = profFromStage;
+        }
+
+        if (creator == CreatorTypeEvaluation.PROF) {
+            prof = profRepository.findById(creatorId)
+                    .orElseThrow(() -> new RuntimeException("Professeur non trouvé"));
+            emp = employerFromStage;
+        }
+
+        EvaluationStagiaire evaluation = EvaluationStagiaire.builder()
                 .dateEvaluation(LocalDate.now())
-                .employeur(employeur)
                 .student(student)
                 .internshipOffer(internshipOffer)
-                .submitted(false)
+                .employeur(emp)
+                .professeur(prof)
+                .ententeStage(stage)
+
+                .submittedByEmployer(false)
+                .submittedByProfessor(false)
+
+                .employerPdfFilePath(null)
+                .professorPdfFilePath(null)
                 .build();
 
-        EvaluationStagiaire evaluationStagiaire = evaluationStagiaireRepository.save(stage);
-        return mapToDto(evaluationStagiaire);
+        evaluationStagiaireRepository.save(evaluation);
+
+        return mapToDto(evaluation);
     }
-    public EvaluationInfoDto getEvaluationInfo(Long employeurId, Long studentId, Long internshipOfferId) {
-        boolean isEligible = isEvaluationEligible(employeurId, studentId, internshipOfferId);
+    public EvaluationEmployerInfoDto getEvaluationInfoForEmployer(Long employeurId, Long studentId, Long internshipOfferId) {
+        boolean isEligible = isEvaluationEligible(CreatorTypeEvaluation.EMPLOYER, employeurId, studentId, internshipOfferId);
+        EvaluationStagiaire eval =
+                evaluationStagiaireRepository.findByStudentIdAndInternshipOfferId(studentId, internshipOfferId)
+                        .orElse(null);
 
         if (!isEligible) {
             throw new IllegalStateException("Evaluation not allowed - agreement not validated or not found");
         }
 
-        if (evaluationStagiaireRepository.existsByInternshipOfferIdAndStudentId(internshipOfferId, studentId)) {
-            throw new IllegalStateException("Une évaluation existe déjà pour ce stagiaire et ce stage");
+        if (eval != null && eval.isSubmittedByEmployer()) {
+            throw new IllegalStateException("L'employeur a déjà complété cette formulaire.");
         }
 
         Student student = studentRepository.findById(studentId)
@@ -78,19 +157,69 @@ public class EvaluationStagiaireService {
                 internship.getCompanyName()
         );
 
-        return new EvaluationInfoDto(studentInfo, internshipInfo);
+        return new EvaluationEmployerInfoDto(studentInfo, internshipInfo);
     }
 
-    public EvaluationStagiaireDto generateEvaluationPdf(Long evaluationId, EvaluationFormData formData, String langage){
+    public EvaluationTeacherInfoDto getEvaluationInfoForTeacher(Long profId, Long studentId, Long internshipOfferId){
+        EntenteStage entente = ententeStageRepository
+                .findByProf_IdAndCandidature_Student_IdAndCandidature_InternshipOffer_Id(
+                        profId, studentId, internshipOfferId
+                )
+                .orElseThrow(() -> new IllegalStateException(
+                        "Aucune entente de stage associée à ce professeur pour cet étudiant et ce stage."
+                ));
+
+        EvaluationStagiaire eval =
+                evaluationStagiaireRepository.findByStudentIdAndInternshipOfferId(studentId, internshipOfferId)
+                        .orElse(null);
+
+        if (eval != null && eval.isSubmittedByProfessor()) {
+            throw new IllegalStateException("le profeseur a déjà complété cette formulaire");
+        }
+        Student student = entente.getCandidature().getStudent();
+        InternshipOffer internship = entente.getCandidature().getInternshipOffer();
+        Employeur employeur = entente.getEmployeur();
+        Prof prof = entente.getProf();
+
+        if (employeur == null)
+            throw new IllegalStateException("Aucun employeur associé à cette ofre de stage");
+        EntrepriseTeacherDto entrepriseTeacherDto = new EntrepriseTeacherDto(
+                internship.getCompanyName(),
+                employeur.getFirstName() + " " + employeur.getLastName(),
+                internship.getAddress(),
+                employeur.getEmail()
+        );
+        StudentTeacherDto studentTeacherDto = new StudentTeacherDto(
+                student.getFirstName() + " " + student.getLastName(),
+                internship.getStartDate()
+        );
+        ProfDto profDto = ProfDto.create(prof);
+
+
+        return new EvaluationTeacherInfoDto(entrepriseTeacherDto, studentTeacherDto, profDto);
+    }
+
+    public EvaluationStagiaireDto generateEvaluationPdfByEmployer(Long evaluationId, EvaluationEmployerFormData formData, String langage){
         EvaluationStagiaire evaluation = evaluationStagiaireRepository.findById(evaluationId)
                 .orElseThrow(() -> new RuntimeException("Évaluation non trouvée"));
 
         Prof professeur = getProfesseurFromEntenteStage(evaluation);
-        String pdfPath = pdfGeneratorService.genererEvaluationPdf(evaluation, formData, langage,
+        String pdfPath = pdfGeneratorService.generatedEvaluationByEmployer(evaluation, formData, langage,
                 professeur.getFirstName(), professeur.getLastName(),
                 professeur.getNameCollege(), professeur.getAddress(), professeur.getFax_machine());
-        evaluation.setPdfFilePath(pdfPath);
-        evaluation.setSubmitted(true);
+        evaluation.setEmployerPdfFilePath(pdfPath);
+        evaluation.setSubmittedByEmployer(true);
+        EvaluationStagiaire savedEvaluation = evaluationStagiaireRepository.save(evaluation);
+        return mapToDto(savedEvaluation);
+    }
+    public EvaluationStagiaireDto generateEvaluationByTeacher(Long evaluationId, EvaluationProfFormDto formData, String langage){
+        EvaluationStagiaire evaluation = evaluationStagiaireRepository.findById(evaluationId)
+                .orElseThrow(() -> new RuntimeException("Évaluation non trouvée"));
+        EvaluationTeacherInfoDto info = buildTeacherInfo(evaluation);
+
+        String pdfPath = pdfGeneratorService.generatedEvaluationByTeacher(evaluation, formData, info, langage);
+        evaluation.setProfessorPdfFilePath(pdfPath);
+        evaluation.setSubmittedByProfessor(true);
         EvaluationStagiaire savedEvaluation = evaluationStagiaireRepository.save(evaluation);
         return mapToDto(savedEvaluation);
     }
@@ -125,15 +254,19 @@ public class EvaluationStagiaireService {
                 .build();
     }
 
-    public byte[] getEvaluationPdf(Long evaluationId){
+    public byte[] getEvaluationPdf(Long evaluationId, CreatorTypeEvaluation actor){
         EvaluationStagiaire evaluation = evaluationStagiaireRepository.findById(evaluationId)
                 .orElseThrow(() -> new RuntimeException("Évaluation non trouvée"));
 
-        if (evaluation.getPdfFilePath() == null) {
+        String path = (actor == CreatorTypeEvaluation.EMPLOYER)
+                ? evaluation.getEmployerPdfFilePath():
+                evaluation.getProfessorPdfFilePath();
+
+        if (path == null) {
             throw new RuntimeException("PDF non généré pour cette évaluation");
         }
 
-        return pdfGeneratorService.lireFichierPDF(evaluation.getPdfFilePath());
+        return pdfGeneratorService.lireFichierPDF(path);
     }
     public EvaluationStagiaireDto getEvaluationById(Long id){
         return evaluationStagiaireRepository.findById(id)
@@ -141,11 +274,29 @@ public class EvaluationStagiaireService {
                 .orElseThrow(() -> new RuntimeException("Évaluation non trouvée"));
 
     }
+
     public List<EvaluationStagiaireDto> getEvaluationsByEmployeur(Long employeurId) {
-        return evaluationStagiaireRepository.findByEmployeurId(employeurId)
-                .stream()
+        return getEvaluationByCreator(CreatorTypeEvaluation.EMPLOYER, employeurId);
+    }
+
+    public List<EvaluationStagiaireDto> getEvaluationsByProfesseur(Long profId) {
+        return getEvaluationByCreator(CreatorTypeEvaluation.PROF, profId);
+    }
+    private List<EvaluationStagiaireDto> getEvaluationByCreator(CreatorTypeEvaluation creator, Long creatorId){
+        List<EvaluationStagiaire> evaluations;
+
+        switch(creator){
+            case EMPLOYER ->
+                    evaluations = evaluationStagiaireRepository.findByEmployeurId(creatorId);
+            case PROF ->
+                    evaluations = evaluationStagiaireRepository.findByProfesseurId(creatorId);
+            default ->
+                    throw new IllegalArgumentException("Unknown creator type: " + creator);
+
+        }
+        return evaluations.stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private EvaluationStagiaireDto mapToDto(EvaluationStagiaire evaluation){
@@ -154,47 +305,71 @@ public class EvaluationStagiaireService {
                 evaluation.getDateEvaluation(),
                 evaluation.getStudent().getId(),
                 evaluation.getEmployeur().getId(),
+                evaluation.getProfesseur().getId(),
                 evaluation.getInternshipOffer().getId(),
-                evaluation.getPdfFilePath(),
-                evaluation.isSubmitted()
+                evaluation.getEmployerPdfFilePath(),
+                evaluation.getProfessorPdfFilePath(),
+                evaluation.isSubmittedByEmployer(),
+                evaluation.isSubmittedByProfessor()
         );
     }
-    public boolean isEvaluationEligible(Long employeurId, Long studentId, Long internshipOfferId) {
-        Optional<EntenteStage> validAgreement = ententeStageRepository
-                .findByCandidature_Student_IdAndCandidature_InternshipOffer_IdAndStatut(
-                        studentId, internshipOfferId, EntenteStage.StatutEntente.VALIDEE);
-
-        if (validAgreement.isEmpty()) {
-            return false;
-        }
-
-        EntenteStage agreement = validAgreement.get();
-        return agreement.getEmployeur().getId().equals(employeurId);
+    public boolean isEvaluationEligible(CreatorTypeEvaluation creatorType, Long creatorId, Long studentId, Long internshipOfferId) {
+        return findValidEntenteForCreator(creatorType, creatorId, studentId, internshipOfferId).isPresent();
     }
 
-    public List<EligibleEvaluationDto> getEligibleEvaluations(Long employeurId) {
-        List<EntenteStage> validatedAgreements = ententeStageRepository
-                .findByCandidature_InternshipOffer_Employeur_IdAndStatut(
-                        employeurId, EntenteStage.StatutEntente.VALIDEE);
+    public List<EligibleEvaluationDto> getEligibleEvaluations(CreatorTypeEvaluation creatorType, Long creatorId) {
+        List<EntenteStage> ententes = null;
 
-        return validatedAgreements.stream()
-                .map(agreement -> {
-                    Optional<EvaluationStagiaire> existingEvaluation = evaluationStagiaireRepository
-                            .findByStudentIdAndInternshipOfferId(
-                                    agreement.getStudent().getId(),
-                                    agreement.getCandidature().getInternshipOffer().getId()
+        if(creatorType == CreatorTypeEvaluation.EMPLOYER){
+            ententes = ententeStageRepository
+                    .findByCandidature_InternshipOffer_Employeur_IdAndStatut(
+                            creatorId, EntenteStage.StatutEntente.VALIDEE
+                    );
+        }
+        if(creatorType == CreatorTypeEvaluation.PROF){
+            ententes = ententeStageRepository
+                    .findByProf_IdAndStatut(creatorId, EntenteStage.StatutEntente.VALIDEE);
+        }
+        return ententes.stream()
+                .map(entente -> {
+                    Optional<EvaluationStagiaire> existingEval =
+                            evaluationStagiaireRepository.findByStudentIdAndInternshipOfferId(
+                                    entente.getStudent().getId(),
+                                    entente.getCandidature().getInternshipOffer().getId()
                             );
-
-                    return mapToEligibleEvaluationDto(agreement, existingEvaluation.orElse(null));
+                    return mapToEligibleEvaluationDto(entente, existingEval.orElse(null));
                 })
                 .collect(Collectors.toList());
+    }
+
+    private Optional<EntenteStage> findValidEntenteForCreator(
+            CreatorTypeEvaluation creatorType,
+            Long creatorId,
+            Long studentId,
+            Long internshipOfferId
+    ){
+        if(creatorType == CreatorTypeEvaluation.EMPLOYER){
+            return ententeStageRepository
+                    .findByCandidature_Student_IdAndCandidature_InternshipOffer_IdAndStatut(
+                            studentId,
+                            internshipOfferId,
+                            EntenteStage.StatutEntente.VALIDEE
+                    )
+                    .filter(ent -> ent.getEmployeur().getId().equals(creatorId));
+
+        }
+        return ententeStageRepository
+                .findByProf_IdAndCandidature_Student_IdAndCandidature_InternshipOffer_IdAndStatut(
+                        creatorId, studentId, internshipOfferId, EntenteStage.StatutEntente.VALIDEE
+                );
     }
 
     private EligibleEvaluationDto mapToEligibleEvaluationDto(EntenteStage agreement, EvaluationStagiaire evaluation) {
         Candidature candidature = agreement.getCandidature();
         Student student = candidature.getStudent();
         InternshipOffer offer = candidature.getInternshipOffer();
-
+        boolean isSubmitted = evaluation != null
+                && (evaluation.isSubmittedByEmployer() || evaluation.isSubmittedByProfessor());
         return new EligibleEvaluationDto(
                 agreement.getId(),
                 student.getId(),
@@ -209,12 +384,29 @@ public class EvaluationStagiaireService {
                 offer.getStartDate().plusWeeks(offer.getDurationInWeeks()),
                 evaluation != null,  // hasEvaluation
                 evaluation != null ? evaluation.getId() : null,  // evaluationId
-                evaluation != null ? evaluation.isSubmitted() : false  // evaluationSubmitted
+                isSubmitted // evaluationSubmitted
         );
     }
 
     public Optional<EvaluationStagiaireDto> getExistingEvaluation(Long studentId, Long internshipOfferId) {
         return evaluationStagiaireRepository.findByStudentIdAndInternshipOfferId(studentId, internshipOfferId)
                 .map(this::mapToDto);
+    }
+    private EvaluationTeacherInfoDto buildTeacherInfo(EvaluationStagiaire e) {
+
+        EntrepriseTeacherDto entreprise = new EntrepriseTeacherDto(
+                e.getEmployeur().getCompanyName(),
+                e.getEmployeur().getFirstName() + " " + e.getEmployeur().getLastName(),
+                e.getInternshipOffer().getAddress(),
+                e.getEmployeur().getEmail()
+        );
+
+        StudentTeacherDto student = new StudentTeacherDto(
+                e.getStudent().getFirstName() + " " + e.getStudent().getLastName(),
+                e.getInternshipOffer().getStartDate()
+        );
+        ProfDto prof = ProfDto.create(e.getProfesseur());
+
+        return new EvaluationTeacherInfoDto(entreprise, student, prof);
     }
 }
